# almosthere

./: .appveyor.yml  .circleci.yml  .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  GITHUB_URL  Makefile  NAME  README.md  appveyor.yml  athr-config.cmake.in  athr.c  athr.h  athr_array.h  athr_canvas.c  athr_canvas.h  athr_canvas_view.h  athr_common.h  athr_elapsed.c  athr_elapsed.h  athr_ema.h  athr_logger.c  athr_logger.h  athr_max.h  athr_min.h  athr_option.h  athr_os.h  athr_ovs_atomic.h  athr_ovs_atomic_msvc.h  athr_ovs_atomic_posix.h  athr_stringify.h  athr_terminal.c  athr_terminal.h  athr_terminal_curses.c  athr_terminal_curses.h  athr_terminal_ioctl.c  athr_terminal_ioctl.h  (+26 more)
.github/workflows/: cmake.yml  deploy.yml  test.yml
cmake/: CPM.cmake  FindLibRt.cmake  limix.cmake
include/: CMakeLists.txt  almosthere.h  athr.h
include/athr/: athr.h
src/: CMakeLists.txt  almosthere.c  almosthere_thread.h  almosthere_time.c  almosthere_time.h  almosthere_widget.c  almosthere_widget.h  athr.c  athr.h  athr_time.c  athr_time.h  canvas.c  canvas.h  cline.c  clock_gettime.c  clock_gettime.h  common.h  deprecated.c  elapsed.c  elapsed.h  ema.h  error.c  error.h  hide.h  logger.c  logger.h  posix_check.h  report.c  report.h  snprintf.h  term_curses.c  term_curses.h  term_ioctl.c  term_ioctl.h  term_win32.c  term_win32.h  terminal.c  terminal.h  thr.c  thr.h  (+11 more)
src/athr/: athr.h  canvas.h  canvas_view.h  deprecated.h  ema.h  error.h  logger.h  option.h  os.h  ovs_atomic.h  ovs_atomic_msvc.h  rc.h  term.h  terminal.h  thr.h  widget.h  widget_bar.h  widget_eta.h  widget_main.h  widget_perc.h  widget_text.h
src/athr/widget/: bar.h  eta.h  main.h  perc.h  text.h  total.h  widget.h
src/terminal/: curses.c  dummy.c  terminal.c  terminal.h  win32.c
src/thread/: c11threads.h  thread.h  tinycthread.c  tinycthread.h
src/widget/: bar.c  bar.h  eta.c  eta.h  line.c  line.h  main.c  perc.c  perc.h  text.c  text.h  widget.h
test/: CMakeLists.txt  brake.c  demo.c  demo_fast.c  demo_slow.c  deprecated.c  example0.c  example1.c  example2.c  example3.c  example4.c
test/src/: example1.c  example2.c  example3.c  example4.c
